samples/_failures_safe/1761188735_92b1ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bc19eb1.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_4bc19eb1.c:153:5: error: expected expression at end of input
  153 |     for (int i = 0; i < g->node_count; i++)
      |     ^~~
./samples/SAFE/__tmp_4bc19eb1.c:153:5: error: expected declaration or statement at end of input
